add zh lang fonts

--- a/excalidraw-app/index.html
+++ b/excalidraw-app/index.html
@@ -56,6 +56,28 @@
 
     <link rel="canonical" href="https://excalidraw.com" />
 
+    <link
+      rel="preload"
+      href="../packages/excalidraw/fonts/zhuifeng.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="../packages/excalidraw/fonts/qingping.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="../packages/excalidraw/fonts/shangqian.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+
     <!------------------------------------------------------------------------->
     <!--   to minimize white flash on load when user has dark mode enabled   -->
     <script>
